--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,6 @@ authors = [
     { name="Ramon Winterhalder", email="ramon.winterhalder@unimi.it" },
   { name="Javier Marino Villadamigo", email="marino@thphys.uni-heidelberg.de" }
 ]
-description = "ML for color amplitude reweighting"
 readme = "README.md"
 requires-python = ">=3.10"
 classifiers = [
@@ -18,15 +17,15 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
-urls = {
-    "Repository" = "https://github.com/madgraph-ml/madrecolor"
-}
+urls = {"Repository" = "https://github.com/madgraph-ml/madrecolor"}
 dependencies = [
     "numpy",
     "torch",  # or "tensorflow" if using TF
-    "madgraph5_amc_nlo",
     "black"
 ]
 
 [tool.black]
 line-length = 88
+
+[project.scripts]
+src = "madrecolor.main:main"
