unified params files

--- a/madrecolor/params/gg_4g.yaml
+++ b/madrecolor/params/gg_4g.yaml
@@ -1,10 +1,10 @@
 run_name: gg_4g-scalarproducts
 
 dataset_params:
-  type: gg_4g
+  type: gg_ng
   process: gg_4g
   
-  gg_4g: data/gg_ng/events_6_2_21_21_21_21_21_21_1_2_3_4_5_6.lhe.rwgt
+  gg_4g: madrecolor/data/gg_ng/events_6_2_21_21_21_21_21_21_1_2_3_4_5_6.lhe.rwgt
   
   
   trn_tst_val_split: [0.5, 0.4, 0.1]
@@ -56,7 +56,7 @@ dataset_params:
 
 
 model_params:
-  type: MLP # Conditional Flow Matching. Architecture is just a simple feedforward network
+  type: MLP
   hidden_layers: 5 #5
   internal_size: 128 #256
   lr: 1.e-3
