--- a/config/mlp-lorentz.yaml
+++ b/config/mlp-lorentz.yaml
@@ -32,15 +32,18 @@ train:
   warm_start: false
   checkpoint: final
 
-  lr: 1e-4
+  lr: 1e-3
   clip_grad_norm: 10
   optimizer: adam
-  scheduler: null                # [cosine_annealing, stepLR, null]
+  scheduler: null                # [cosine_annealing, ReduceLROnPlateau, null]
+  lr_factor: 0.1
+  lr_patience: 10
   nepochs: 300
   batch_size: 512
   batch_size_eval: 4096
+  loss: MSE
   heteroscedastic_loss:
-    use: true
+    use: false
     scale: 1e-2
     activate_after_its: .40
 
