modified mlflow config

--- a/config/mlflow.yaml
+++ b/config/mlflow.yaml
@@ -1,6 +1,6 @@
 mlflow:
   log_every: 1
-  tracking_uri: sqlite:///results/mlflow/mlflow.db
+  tracking_uri: sqlite:///results/${model.type}/mlflow.db
   experiment_name: "results/${model.type}"
   db: "results/${model.type}/mlflow/mlflow.db"
   artifacts: "results/${model.type}/mlflow/artifacts"
