--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ dependencies = [
     "scikit-hep",
     "torch>=2.2",
     "hydra-core>=1.2",
-    "mlflow"==2.22.0",
+    "mlflow==2.22.0",
 ]
 
 [tool.black]
