--- a/config/transformer-naive.yaml
+++ b/config/transformer-naive.yaml
@@ -1,8 +1,3 @@
-run:
-  name: null
-  path: ???
-
-
 dataset:
   type: gg_ng
   process: gg_5g
@@ -38,22 +33,22 @@ train:
   lr: 1e-3
   clip_grad_norm: 10
   optimizer: adam
-  scheduler: CosineAnnealingLR                # [cosine_annealing, ReduceLROnPlateau, null]
+  scheduler: ReduceLROnPlateau  # [CosineAnnealingLR, ReduceLROnPlateau, null]
   lr_factor: 0.1
   lr_patience: 10
   nepochs: 400
-  batch_size: 512
+  batch_size: 1024
   batch_size_eval: 4096
   loss: MSE
-  heteroscedastic_loss:
-    use: false
-    scale: 1e-2
-    activate_after_its: .40
+  early_stopping:
+    use: true
+    patience: 25
 
 evaluate:
-  save_samples: true
+  save_samples: false
   save_data: false
   evaluate_best: true
+  save_lines: true
 
 defaults:
   - model: transformer-500k
