--- a/config/mlp-lorentz-r.yaml
+++ b/config/mlp-lorentz-r.yaml
@@ -1,7 +1,3 @@
-run:
-  name: null
-  path: ???
-
 dataset:
   type: gg_ng
   process: gg_4g
@@ -36,13 +32,13 @@ train:
   warm_start: false
   checkpoint: final
 
-  lr: 1e-4
+  lr: 1e-3
   clip_grad_norm: 10
   optimizer: adam
   scheduler: CosineAnnealingLR  # [CosineAnnealingLR, ReduceLROnPlateau, null]
   lr_factor: 0.1
   lr_patience: 10
-  nepochs: 500
+  nits: 3000 # 250_000
   batch_size: 1024
   batch_size_eval: 4096
   loss: MSE
