--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,6 +27,7 @@ dependencies = [
     "torch>=2.2",
     "hydra-core>=1.2",
     "mlflow==2.22.0",
+    "torch_geometric==2.6.1",
 ]
 
 [tool.black]
